solved spacing and positioning issues on front page

--- a/index.css
+++ b/index.css
@@ -111,6 +111,9 @@ section {
 
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 75vw;
   margin-top: 128px;
   gap: 16px;
 
@@ -125,6 +128,7 @@ section {
   align-items: center;
   /* writing-mode: vertical-rl; */
   bottom: 0;
+  width: 75vw;
   padding: 2px;
   gap: 10%;
 }
